--- a/3_visualization.ipynb
+++ b/3_visualization.ipynb
@@ -41,14 +41,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Functions\n",
-    "\n",
     "# Function to convert list of strings represented itself as string to a normal list with strings\n",
     "def destring_list(input_list):\n",
     "    input_list = input_list.strip('][')\n",
     "    output_list = re.compile(\"\\]\\[\").sub(', ', input_list)\n",
     "    output_list = re.compile(\"\\'\").sub('', output_list).split(', ') \n",
-    "    return output_list\n"
+    "    return output_list"
    ]
   },
   {
@@ -332,7 +330,7 @@
     "hist_submissions_men = sns.histplot(data = men.minmax_grouped, bins = 50, ax = ax[1]).set(title = \"Histogram of grouped minmax variable - Men\");\n",
     "plt.axvline(men.minmax_grouped.median(), color='r', linestyle='--')\n",
     "plt.axvline(men.minmax_grouped.mean(), color='g', linestyle='--')\n",
-    "plt.show();\n"
+    "plt.show();"
    ]
   },
   {
@@ -404,7 +402,7 @@
     "hist_submissions_women = sns.histplot(data = women.minmax_grouped, bins = 50, ax = ax[1]).set(title = \"Histogram of grouped minmax variable - Women\");\n",
     "plt.axvline(women.minmax_grouped.median(), color='r', linestyle='--')\n",
     "plt.axvline(women.minmax_grouped.mean(), color='g', linestyle='--')\n",
-    "plt.show();\n"
+    "plt.show();"
    ]
   },
   {
@@ -649,20 +647,17 @@
     "is_positive_men = list()\n",
     "is_positive_women = list()\n",
     "\n",
-    "\n",
     "for i in men.comment_score:\n",
     "    if (i > men.comment_score.median()):\n",
     "        is_positive_men.append('positive')\n",
     "    else:\n",
     "        is_positive_men.append('negative')\n",
     "        \n",
-    "\n",
     "for i in women.comment_score:\n",
     "    if (i > women.comment_score.median()):\n",
     "        is_positive_women.append('positive')\n",
     "    else:\n",
     "        is_positive_women.append('negative')\n",
-    "        \n",
     "        \n",
     "men['sentiment'] = is_positive_men\n",
     "women['sentiment'] = is_positive_women"
@@ -805,8 +800,7 @@
     "plt.imshow(wordcloud_women)\n",
     "plt.axis('off')\n",
     "print(\"/r/AskWomen Wordcloud plot\")\n",
-    "plt.show();\n",
-    "\n"
+    "plt.show();"
    ]
   },
   {
@@ -1020,7 +1014,7 @@
     "ax[0].invert_yaxis()\n",
     "freq_women['count'].loc[freq_women['order_of'] < 20].plot.barh(ax = ax[1],legend = None).set(title = \"20 most common words - Women\\n(without most shared words)\");\n",
     "ax[1].invert_yaxis()\n",
-    "plt.show();\n"
+    "plt.show();"
    ]
   }
  ],
